fix(guides) Extra padding on accordion headers

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -411,7 +411,7 @@ h2:after {
   width: 100%;
   text-align: left;
   color: #d03233;
-  padding: .75rem 1.25rem;
+  padding: 1.5rem 1.25rem;
   text-transform: lowercase;
   text-decoration: none;
   transition: .7s transform fade-in;
